[tool.poetry]
name = "logistic-regression"
version = "0.1.0"
description = ""
authors = ["W.B."]
readme = "README.md"
packages = [{include = "logistic_regression"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
